--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -259,8 +259,9 @@
                     <ul class="provided-code">
                                 <li class="provided-code">
             <b>RESTEasy Reactive</b>&nbsp;Easily start your Reactive RESTful Web Services
-            <br />&rsaquo; <code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code>
+            <br />&rsaquo; <code>@Path: <a href="/say" class="path-link" target="_blank">/say</a></code>
             <br />&rsaquo; <a href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources" class="guide-link" target="_blank">Related guide</a>
+            <br />&rsaquo; <a href="sse.html" class="guide-link" target="_blank">Greeting</a>
         </li>
 
                     </ul>
